# BI-OSY

./: .gitignore  README.md
homeworks/1/: CMakeLists.txt  Makefile  common.h  progtest_solver.h  sample_tester.cpp  solution.cpp
